--- a/src/AdvApi32.Desktop/AdvApi32.Desktop.csproj
+++ b/src/AdvApi32.Desktop/AdvApi32.Desktop.csproj
@@ -56,7 +56,9 @@
     <Compile Include="AdvApi32+ServiceTriggerType.cs" />
     <Compile Include="AdvApi32+ServiceTriggerInfo.cs" />
     <Compile Include="AdvApi32+SERVICE_TRIGGER_SPECIFIC_DATA_ITEM.cs" />
-    <Compile Include="AdvApi32.cs" />
+    <Compile Include="AdvApi32.cs">
+      <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
+    </Compile>
     <Compile Include="AdvApi32.Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AdvApi32+ServiceTriggerDataType.cs" />
