--- a/src/CodeGenerationAttributes.Profile111/project.json
+++ b/src/CodeGenerationAttributes.Profile111/project.json
@@ -5,11 +5,11 @@
       "suppressParent": "none"
     },
     "Nerdbank.GitVersioning": {
-      "version": "1.3.8",
+      "version": "1.4.6",
       "suppressParent": "none"
     },
     "Nuproj.Common": {
-      "version": "0.10.27-beta-g2363d7cd98",
+      "version": "0.10.48-beta-gea4a31bbc5",
       "suppressParent": "none"
     },
     "StyleCop.Analyzers": "1.0.0-rc2"
