--- a/src/Windows.Core.Profile111/project.json
+++ b/src/Windows.Core.Profile111/project.json
@@ -2,12 +2,12 @@
   "supports": { },
   "dependencies": {
     "Nerdbank.GitVersioning": {
-      "version": "1.3.8",
+      "version": "1.4.6",
       "suppressParent": "none"
     },
-    "Nuproj": "0.10.27-beta-g2363d7cd98",
+    "Nuproj": "0.10.48-beta-gea4a31bbc5",
     "Nuproj.Common": {
-      "version": "0.10.27-beta-g2363d7cd98",
+      "version": "0.10.48-beta-gea4a31bbc5",
       "suppressParent": "none"
     },
     "StyleCop.Analyzers": "1.0.0-rc2"
