--- a/src/User32.Desktop/User32.Desktop.csproj
+++ b/src/User32.Desktop/User32.Desktop.csproj
@@ -35,6 +35,7 @@
     <Compile Include="User32+SafeHookHandle.cs" />
     <Compile Include="User32+GetAncestorFlags.cs" />
     <Compile Include="User32+SetWindowLongFlags.cs" />
+    <Compile Include="User32+PrintWindowFlags.cs" />
     <Compile Include="User32+SetWindowPosFlags.cs" />
     <Compile Include="User32+WindowLongIndexFlags.cs" />
     <Compile Include="User32+WindowsHookType.cs" />
