--- a/src/User32.Desktop/User32.Desktop.csproj
+++ b/src/User32.Desktop/User32.Desktop.csproj
@@ -21,6 +21,15 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="User32+InputType.cs" />
+    <Compile Include="User32+KEYEVENTF.cs" />
+    <Compile Include="User32+MOUSEEVENTF.cs" />
+    <Compile Include="User32+MOUSEINPUT.cs" />
+    <Compile Include="User32+KEYBDINPUT.cs" />
+    <Compile Include="User32+HARDWAREINPUT.cs" />
+    <Compile Include="User32+INPUT.cs" />
+    <Compile Include="User32+QueueStatusFlags.cs" />
+    <Compile Include="User32+PeekMessageParams.cs" />
     <Compile Include="User32+VirtualKey.cs" />
     <Compile Include="User32+ScanCode.cs" />
     <Compile Include="User32+WindowMessage.cs" />
