--- a/src/Shell32.Desktop/Shell32.Desktop.csproj
+++ b/src/Shell32.Desktop/Shell32.Desktop.csproj
@@ -36,6 +36,10 @@
       <ExcludeFromNuPkg>true</ExcludeFromNuPkg>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
+    <ProjectReference Include="..\Kernel32.Desktop\Kernel32.Desktop.csproj">
+      <Project>{18BA8C60-9A63-4EEA-BB5C-C9899D86F5B8}</Project>
+      <Name>Kernel32.Desktop</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Windows.Core\Windows.Core.csproj">
       <Project>{b08c3c79-4cdd-4d37-933c-07d3452fd5f1}</Project>
       <Name>Windows.Core</Name>
@@ -46,7 +50,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Shell32+CSIDL.cs" />
-    <Compile Include="Shell32+SHITEMID.cs" />
+    <Compile Include="Shell32+SHITEMID.cs">
+      <Generator>MSBuild:GenerateCodeFromAttributes</Generator>
+    </Compile>
     <Compile Include="Shell32+ITEMIDLIST.cs" />
     <Compile Include="Shell32+SHGetFolderPathFlags.cs" />
     <Compile Include="Shell32.cs">
