--- a/src/CodeGeneration/project.json
+++ b/src/CodeGeneration/project.json
@@ -12,7 +12,7 @@
       "version": "0.10.48-beta-gea4a31bbc5",
       "suppressParent": "none"
     },
-    "StyleCop.Analyzers": "1.0.0-rc2"
+    "StyleCop.Analyzers": "1.0.0"
   },
   "frameworks": {
     ".NETFramework,Version=v4.6": { }
