--- a/src/Windows.Core.Profile111/project.json
+++ b/src/Windows.Core.Profile111/project.json
@@ -10,7 +10,7 @@
       "version": "0.10.48-beta-gea4a31bbc5",
       "suppressParent": "none"
     },
-    "StyleCop.Analyzers": "1.0.0-rc2"
+    "StyleCop.Analyzers": "1.0.0"
   },
   "frameworks": {
     ".NETPortable,Version=v4.5,Profile=Profile111": { }
