--- a/src/Kernel32.Desktop/Kernel32.Desktop.csproj
+++ b/src/Kernel32.Desktop/Kernel32.Desktop.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Kernel32+ICONDIR.cs" />
     <Compile Include="Kernel32+ICONDIRENTRY.cs" />
     <Compile Include="Kernel32+GetModuleHandleExFlags.cs" />
+    <Compile Include="Kernel32+IoCounters.cs" />
     <Compile Include="Kernel32+JobObjectBasicLimitInformation.cs" />
     <Compile Include="Kernel32+JobObjectLimitFlags.cs" />
     <Compile Include="Kernel32+LoadLibraryExFlags.cs" />
