--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -56,7 +56,7 @@
     <ProjectReference Include="..\CodeGenerationAttributes\CodeGenerationAttributes.csproj" PrivateAssets="all" />
     <BuildProjectReference Include="..\CodeGeneration\CodeGeneration.csproj" />
   </ItemGroup>
-  <ItemGroup Condition=" $(MSBuildProjectName.Contains('.Tests')) ">
+  <ItemGroup Condition=" '$(IsTestProject)' == 'true' ">
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
