--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,21 +6,17 @@ environment:
   VisualStudioVersion: 15.0
   GeneratePInvokesTxt: true
   TreatWarningsAsErrors: true
-cache:
-- '%USERPROFILE%\.nuget\packages -> **\project.json'
-install:
-- ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/install-nuget-3-3-0.ps1'))
 before_build:
 - ps: >-
-    nuget restore src -Verbosity quiet
+    cd src
+
+    msbuild PInvoke.sln /nologo /m /v:minimal /t:restore
 
     #$blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
-build:
-  project: src\pinvoke.sln
-  parallel: true
-  verbosity: minimal
+build_script:
+- ps: msbuild PInvoke.sln /nologo /m /v:minimal /t:build,pack
 artifacts:
-- path: bin\**\*.nupkg
+- path: bin\**\PInvoke.*.nupkg
   name: NuGet Package
 - path: bin\**\*.pinvokes.txt
   name: PInvoke method coverage
